--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-svg": "^13.13.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "^0.19.8"
+    "react-native-web": "^0.19.8",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
